--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -5,9 +5,10 @@ body, html {
 }
 
 .custom-nav {
-  background-color: rgba(0,0,0,0.5);
+  background-color: rgba(0,0,0,0.3);
   background: transparent;
   border-color: transparent;
+  font-size: 1.2rem;
   
 }
 
@@ -19,3 +20,14 @@ body {
   width: 100%;
   
 }
+
+.main-homepage {
+  padding: 1rem;
+  background-color: rgba(192,192,192,0.8);
+}
+
+.contact-form {
+  padding: 1rem;
+  background-color: rgba(192,192,192,0.8);
+}
+
