--- a/styles/new-styles.scss
+++ b/styles/new-styles.scss
@@ -16,25 +16,35 @@ body, html {
   background: transparent;
   border-color: transparent;
   font-size: 1.2rem;
+}
 
+.logo {
+  width: 100%;
+  height: auto;
+}
+
+span { 
+  border-color: black;
+  border-style: solid;
+  border-width: 1.25px;
+  border-radius: 25%;
+  margin-top: 2rem;
 }
 
 
 .searchbar {
   padding: $padding;
   height: 1rem;
-  
 }
 
-
+//background image for website
 body {
   background-image: url(../images/photovoltaic-2138992.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   height: 100%;
   width: 100%;
-  font-family: 'Oswald', sans-serif;
-  
+  font-family: 'Oswald', sans-serif; 
 }
 
 .main-homepage {
@@ -50,13 +60,17 @@ body {
   background-color: rgba(204, 255, 153,0.3);
   padding: $padding;
   border: $border;
-  
 }
 
 .student-of-the-month {
   background-color: rgba(255, 191, 128, 0.5);
   padding: $padding;
   border: $border;
+}
+
+.student-photo:hover {
+  transform: scale(1.4);
+  transition: all 1s ease-in-out;
 }
 
 footer {
@@ -69,9 +83,39 @@ footer {
   background-color: $gray-background;
 }
 
+//advisory board animations
 .ad-board {
   border: $border;
+  transition: all 1s ease-in-out;
 }
 
- 
+.ad-board:hover {
+  transform: scale(1.4);
+}
+
+//media queries for main navigation
+@media only screen and (max-width: 990px) {
+  h1 {
+    font-size: 2rem;
+  }
+  
+}
+
+@media only screen and (max-width: 1200px) {
+  .custom-nav {
+    font-size: 1rem;
+  }
+}
+
+@media only screen and (max-width: 766px) {
+  .custom-nav {
+    margin-left: auto;
+  }
+}
+
+@media only screen and (max-width: 465px) {
+  h1 {
+    font-size: 1.25rem;
+  }
+}
 
